<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="20dp"
    android:padding="20dp"
    android:background="@drawable/rounded_box_value">

    <ImageView
        android:id="@+id/record_image"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:src="@drawable/abandoned_deck"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <FrameLayout
        android:id="@id/highest_hand"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_box_profile"
        app:layout_constraintLeft_toRightOf="@+id/record_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Outer Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/highest_hand"
                android:fontFamily="@font/balatro"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/higher_hand_text"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- Inner Text -->
            <TextView
                android:id="@+id/higher_hand_text"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:padding="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:background="@drawable/rounded_box_value"

                android:fontFamily="@font/balatro"
                android:text="@string/example_hand_number"
                android:textColor="@color/red"
                android:textSize="30sp"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <FrameLayout
        android:id="@id/highest_ante"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_box_profile"

        app:layout_constraintLeft_toRightOf="@+id/record_image"
        app:layout_constraintTop_toBottomOf="@+id/highest_hand"
        app:layout_constraintRight_toLeftOf="@+id/highest_round"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Outer Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/ante"
                android:fontFamily="@font/balatro"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/best_ante_text"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- Inner Text -->
            <TextView
                android:id="@+id/best_ante_text"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:padding="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:background="@drawable/rounded_box_value"

                android:fontFamily="@font/balatro"
                android:text="@string/example_ante_number"
                android:textColor="@color/orange"
                android:textSize="25sp"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <FrameLayout
        android:id="@id/highest_round"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/rounded_box_profile"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/highest_ante"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highest_hand">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Outer Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginHorizontal="20dp"
                android:text="@string/round"
                android:fontFamily="@font/balatro"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/best_round_text"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- Inner Text -->
            <TextView
                android:id="@+id/best_round_text"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:background="@drawable/rounded_box_value"

                android:fontFamily="@font/balatro"
                android:text="@string/example_round_number"
                android:textColor="@color/orange"
                android:textSize="25sp"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>